chore: update .gitignore for input and control flow and prime path images

--- a/.gitignore
+++ b/.gitignore
@@ -161,4 +161,9 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 
+# Puzzle inputs
 input/
+
+# Testing path images
+graphs/*.png
+paths/**/*.png
